# LibMLKEM

./: .gitignore  .gitmodules  README.md  THIRD-PARTY
kani_rust/: mlkem.rs
rust/kani/: mlkem.rs
rust/ref/: Makefile  cbmc.h  config.h  mlkem.c  mlkem.h  poly.c  poly.h  tref.c
rust/verus/: mlkem.rs
rust/verus/mlkem/: Cargo.toml  build.rs
rust/verus/mlkem/src/: lib.rs
spark_ada/: README.md  gentables.adb  gentables.gpr  mlkem.adc  mlkem.gpr  size.mk  stack.mk
spark_ada/experimental/: Makefile  README.md  common.i  cpucycles.adb  cpucycles.ads  cpucycles_h.ads  entt.adb  entt.ads  enttref.adb  enttref.ads  ntt.bat  ntt.c  ntt.cry  ntt.h  ntt32.adb  ntt32.ads  p.adb  p.ads  params.h  rmerge.adb  rmerge.ads  rmerge2-inv.adb  rmerge2-inv.ads  rmerge2.adb  rmerge2.ads  stou2.ads  stou_asm.s  tca.adb  testdiv.adb  tmzq.adb  tntt.adb  tntt.gpr  tref.adb  tref.gpr  tstou.adb  tstou.gpr
spark_ada/experimental/mldsa_model/: mldsa.ads  p.gpr  sign.adb  sign.ads
spark_ada/src/: mlkem-debug.adb  mlkem-debug.ads  mlkem-k_pke_keygen.adb  mlkem-k_pke_keygen_par.adb  mlkem-tests.adb  mlkem-tests.ads  mlkem.adb  mlkem.ads  par.adc  zq_multiply_proof.txt
spark_ada/tests/: Makefile.common  cover.mk  debug.mk  debugpar.mk  fast.mk  fastpar.mk  modulus_ref.txt  tkats.adb  tkats.gpr  tkeygen.adb  tkeygen.gpr  tmodulus.adb  tunlucky.adb  tvalidation.adb  unlucky.rsp  unlucky_ref.txt  validation_ref.txt
